--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -26,7 +26,7 @@
     'modules/_forms',
     'modules/_labels',
     'modules/_fieldsets',
-    'modules/_tables',
+    'modules/tables/_module',
     'modules/_state',
     'modules/_panels',
     'modules/_alerts';
