--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -241,24 +241,24 @@ $field-padding-horizontal: $form-padding-horizontal !default;
 $field-padding-vertical: $form-padding-vertical !default;
 $field-margin-bottom: $fieldset-margin-bottom !default;
 
-// Table Settings
-$table-style: normal !default;
-$table-theme: normal !default;
-$table-margin-bottom: $x-rem !default;
-$table-border-width: $form-border-width !default;
-$table-border-color: $color-gray !default;
-$table-text-align: left !default;
+// // Table Settings
+// $table-style: normal !default;
+// $table-theme: normal !default;
+// $table-margin-bottom: $x-rem !default;
+// $table-border-width: $form-border-width !default;
+// $table-border-color: $color-gray !default;
+// $table-text-align: left !default;
 
-$table-thead-padding: $x-rem / 2 !default;
-$table-thead-type-scale: -1 !default;
-$table-thead-text-transform: uppercase !default;
+// $table-thead-padding: $x-rem / 2 !default;
+// $table-thead-type-scale: -1 !default;
+// $table-thead-text-transform: uppercase !default;
 
-$table-tfoot-padding: $x-rem / 2 !default;
-$table-tfoot-type-scale: 0 !default;
-$table-tfoot-text-transform: uppercase !default;
+// $table-tfoot-padding: $x-rem / 2 !default;
+// $table-tfoot-type-scale: 0 !default;
+// $table-tfoot-text-transform: uppercase !default;
 
-$table-cell-padding: $table-thead-padding !default;
-$table-cell-border-width: $table-border-width !default;
+// $table-cell-padding: $table-thead-padding !default;
+// $table-cell-border-width: $table-border-width !default;
 
 // Navigation Settings
 $nav-style: normal !default;
