--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -23,7 +23,7 @@
     'modules/_tabs',
     'modules/_dropdowns',
     'modules/_buttons',
-    'modules/_forms',
+    'modules/forms/_module',
     'modules/_labels',
     'modules/_fieldsets',
     'modules/tables/_module',
